# discord-webhook-interactions

./: .env  Cargo.toml
src/: main.rs
