[package]
name = "discord-webhook-interactions"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version =  "0.12.0", features = [ "builder", "interactions_endpoint", "tokio-tungstenite", "tokio_task_builder" ] }
axum = { version = "0.7.2", features = ["tokio"] }
serde = { version = "1.0.108", features = ["derive"] }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "rt", "macros"] }
dotenv = "0.15.0"
tower-http = { version = "0.5.0", features = ["cors"] }